--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.compose.material3:material3:1.0.1'
     def nav_version = "2.6.0"
     implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation("io.coil-kt:coil-compose:2.4.0")
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
