--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.1.1'
+    implementation "androidx.compose.material:material:1.6.0-alpha02"
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     def nav_version = "2.6.0"
     implementation "androidx.navigation:navigation-compose:$nav_version"
